<?xml version="1.0"?>
<package format="3">
  <name>rtamt4ros2</name>
  <version>0.2.0</version>
  <description>Online Signal Temporal Logic monitoring for ROS 2 using RTAMT.</description>

  <maintainer email="ia324@cornell.edu">Immanuel Ampomah Mensah</maintainer>
  <author email="ia324@cornell.edu">Immanuel Ampomah Mensah</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rtamt</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
